--- a/curso.css
+++ b/curso.css
@@ -36,7 +36,7 @@ body{
     position:fixed;
     top:30px;
     right:30px;
-    background:yellow;
+    background:red;
     width:40px;
     height:40px;
     cursor:pointer;
