--- a/curso.css
+++ b/curso.css
@@ -8,16 +8,17 @@ body{
     
 }
 .contenedor{
+    background:rgba(0,0,0,.8);
     width:90%;
-    max-width:1200px;
+    max-width:74rem;
     overflow:hidden;
-    margin:auto;
-    padding:60px 0;
+    margin:0% 5%;
+    padding:5em 5em;
 }
 .header{
     height:100vh;
     background-image: linear-gradient(to top, rgba(161, 140, 209, 0.5)0%,
-     rgba(251, 194, 235, 0.5) 100%),url(gabriela.jpg);
+     rgba(66, 56, 63, 0.5) 100%),url(gabriela.jpg);
      background-repeat:no-repeat;
      background-size:cover;
      background-position:center;
@@ -34,14 +35,14 @@ body{
 }
 .hamburger{
     position:fixed;
-    top:30px;
-    right:30px;
+    top:1em;
+    right:1em;
     background:red;
-    width:40px;
-    height:40px;
+    width:4em;
+    height:4em;
     cursor:pointer;
-    border-radius:10px;
-    box-shadow:-4px 4px 6px blue;
+    border-radius:1em;
+    box-shadow:-.3em .3em .5em green;
 }
 .menu-navegacion{
     position:fixed;
@@ -54,7 +55,7 @@ body{
     flex-direction:column;
     justify-content:space-evenly;
     align-items:center;
-    box-shadow:0 0 5px red;
+    box-shadow:0 0 1em red;
     transition:1s;
     transform:translate(110%)
 }
@@ -66,51 +67,57 @@ body{
     text-decoration:none;
 }
 .titulo{
-    font-size:45px;
-    margin-bottom:15px
+    font-size:3em;
+    margin-bottom:1em;
+    background:green
 }
 .copy{
     font-weight:100;
-    font-size:25px
+    font-size:2em
 }
 /*nuestro servicio*/
 .subtitulo{
     text-align:center;
     font-weight:300;
-    color:blue;margin-bottom:40px;
-    font-size:40px
+    color:blue;margin-bottom:2em;
+    font-size:2.5em
 }
 .contenedor-servicio{
     display:flex;
     justify-content:space-evenly;
     align-items:center;
-    flex-wrap:wrap
+    flex-wrap:wrap;
+    background:yellow
 }
 .contenedor-servicio img{
-    width:40%
+    width:50%;
+    background:red
 }
 .checklist-servicio{
-    border:solid black 1px;
     width:45%
 }
 .service{
-    margin-bottom:20px;
+    margin-bottom:.5em;
+    background:grey;
+    font-size:2em;
+    padding: 0 3%;
+    width:100%
 }
 .n-service{
-margin-bottom:7px;
+margin-bottom:.1em;
 color:#9f8ad0;
 }
 .number{
     display:inline-block;
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-    width:30px;
-    height:30px;
+    width:1em;
+    height:1em;
     color:white;
     text-align:center;
     border-radius:50%;
     font-weight:800;
-    line-height:30px;
-    margin-right:5px
+    line-height:.9em;
+    margin-right:.5em
 }
 .gallery{
     background:#f2f2f2;
@@ -123,11 +130,10 @@ color:#9f8ad0;
 }
 .img-galeria{
     object-fit:cover;
-    width:30%;
-    height:200px;
+    width:15em;
+    height:10em;
     display:block;
-    margin-bottom:15px;
-    box-shadow:0 0 6px red;
+    margin:1em 1em;
     cursor:pointer;
 }
 .imagen-light{
@@ -149,7 +155,6 @@ color:#9f8ad0;
 .agregar-imagen{
     width:auto;
     height:106vh;
-    border-radius:0px;
     transform:scale(0);
     transition:transform .2s
 }
@@ -157,11 +162,12 @@ color:#9f8ad0;
     transform:scale(.9);
 }
 .close{
-    position:absolute;
-    top:15px;
-    right:15px;
-    width:40px;
+    position:fixed;
+    top:1em;
+    right:1em;
+    width:2em;
     cursor:pointer;
+    background:green
 }
 .experts{
     background:rgba(36, 19, 218, 0.307);
@@ -174,8 +180,8 @@ color:#9f8ad0;
     background:blue;
     width:30%;
     text-align:center;
-    margin-bottom:20px;
-    margin-top:20px;
+    margin-bottom:1em;
+    margin-top:1em;
 }
 .cont-expert img{
     width:80%;
@@ -184,21 +190,21 @@ color:#9f8ad0;
 }
 .n-expert{
     display:inline-block;
-    margin-top:20px;
+    margin-top:1em;
     width:100%;
     font-weight:400;
 }
 footer{
     background:#9f8ad0;
-    padding-bottom:0.4px;
+    padding-bottom:.1em;
 }
 .footer-content{
     display:flex;
     justify-content:space-between;
     align-items:center;
     flex-wrap:wrap;
-    padding-top:50px;
-    padding-bottom:50px;
+    padding-top:2em;
+    padding-bottom:2em;
 }
 .contact-us{
     width:45%;background:red;
@@ -206,7 +212,7 @@ footer{
 }
 .brand{
     font-weight:500;
-    font-size:40px
+    font-size:2.5em
 }
 .brand+p{
     font-weight:400;
@@ -218,10 +224,10 @@ footer{
 }
 .social-media-icon{
     display:inline-block;
-    margin-left:20px;
-    width:60px;
-    height:60px;
-    border:solid black 1px;
+    margin-left:1em;
+    width:3em;
+    height:3em;
+    border:solid black .2em;
     border-radius:50%;
     text-align:center;
     color:#fff
@@ -231,106 +237,56 @@ footer{
     color:blue
 }
 .social-media-icon i{
-    font-size:30px;
-    line-height:60px
+    font-size:2em;
+    line-height:1.4em
 }
 .line{
     width:90%;
     background:white;
-    margin-bottom:60px;
+    margin-bottom:2em;
     margin:0 auto;
-    height:2px;
-    max-width:1200px;
+    height:.5em;
+    max-width:75rem;
 }
-
-@media screen and (max-width:800px){
-    .checklist-servicio{
-        background:blue;
-    }
-    .menu-navegacion{
-        width:50vw;
-        background:red
-    }
-    .titulo{
-        font-size:40px;
-    }
-    .contenedor-servicio img{
-        width:80%;
-        margin-bottom:40px;
-    }
-    .checklist-servicio{
-        width:80%
+@media (max-width:800px){
+    .hamburger{
+        background:rgb(91, 107, 91)
     }
     .service{
-        margin-bottom:40px
+        width:170%;
+        margin-left:-80px
     }
-    .agregar-imagen{
-        width:90vw;
-        height:100vh
+    .services h2{
+        font-size:60px
+    }
+    .contenedor h2{
+        font-size:60px
     }
     .img-galeria{
-        width:45%;
-        margin-right:25px
+        width:40%
     }
-    .cont-expert{
-        width:80%
+    .contenedor-servicio img{
+        width:90%;
+        margin:2% 0 ;
     }
-    .footer-content{
-        justify-content: center;
+    .brand{
+        font-size:3em;
+        color:black
     }
-    .social-media{
-        width:80%;
-        justify-content:space-evenly;
+/*@media (max-width:400px){
+    .contenedor-servicio img{
+        width:100%
     }
-    .social-media-icon{
-        margin-left:0;
-    }
-    .social-media i{
-        margin-left:0;
-    }
-    .contact-us{
-        text-align:center;
-        width:80%;
-        margin-bottom:40px
-    }
-   
-}
-@media screen and (max-width:500px){
     .checklist-servicio{
-        background:grey;
+        width:100%
     }
- .menu-navegacion{
-     width:65vw;background:blue;
-
- }
- .hamburger{
-     top:20px;
-     right:20px;
- }
- .titulo{
-     font-size:30px;
- }
- .subtitulo{
-    font-size:30px;
-}
- .agregar-imagen{
-     width:90vw;
-     height:90vh
- }
- .img-galeria{
-     width:95%
- }
-
- .social-media{
-     width:100%
- }
- .contact-us{
-     width:90%
- }
-}
-@media screen and (max-width:350px){
-    .agregar-imagen{
-        width:90vw;
-        height:60vh;
+    .service{
+        
+        background:rgb(121, 88, 88);
+        font-size:2em;
+        width:100%
     }
+}*/
 }
+ 
+
