--- a/curso.css
+++ b/curso.css
@@ -18,7 +18,7 @@ body{
 .header{
     height:100vh;
     background-image: linear-gradient(to top, rgba(161, 140, 209, 0.5)0%,
-     rgba(66, 56, 63, 0.5) 100%),url(gabriela.jpg);
+     rgba(66, 56, 63, 0.5) 100%),url(Imagenes/gabriela.jpg);
      background-repeat:no-repeat;
      background-size:cover;
      background-position:center;
