--- a/curso.css
+++ b/curso.css
@@ -36,7 +36,7 @@ body{
     position:fixed;
     top:1em;
     right:1em;
-    background:green;
+    background:purple;
     width:4em;
     height:4em;
     cursor:pointer;
