--- a/curso.css
+++ b/curso.css
@@ -249,7 +249,7 @@ footer{
 }
 @media (max-width:800px){
     .hamburger{
-        background:rgb(91, 107, 91)
+        background:rgb(117, 196, 117)
     }
     .service{
         width:170%;
@@ -267,6 +267,10 @@ footer{
     .contenedor-servicio img{
         width:90%;
         margin:2% 0 ;
+    }
+    .agregar-imagen{
+        height:80vh;
+        width:90%
     }
     .brand{
         font-size:3em;
