--- a/index.css
+++ b/index.css
@@ -33,8 +33,8 @@
 }
 .nav{
     position:fixed;
-    top:1%;
-    right:1%;
+    top:0%;
+    right:0%;
     width:20%;
     height:100vh;
     background:blue;
@@ -43,7 +43,7 @@
     flex-direction:column;
     justify-content:space-evenly;
     list-style:none;
-    transform:translate(110%);
+    transform:translate(130%);
     transition:.5s
 }
 .mostNav{
@@ -87,15 +87,19 @@ nav li a{
 .lectura1{
     width:40%;
     height:250px;
-    background:white
+    background:white;
+    margin-bottom: 1%;
 }
 .lectura2{
     width:40%;
-    background:white
+    background:white;
+    margin-bottom: 1%;
+
 }
 .lectura3{
     width:40%;
-    background:white
+    margin-bottom: 1%;
+    background:white;
 }
 .fotos{
     width:95%;
@@ -131,7 +135,7 @@ nav li a{
     flex-wrap:wrap;
     align-items:center;
     justify-content:center;
-    transform:translate(110%);
+    transform:translate(120%);
     transition:.3s;
 }
 .quitarFondo{
@@ -155,6 +159,50 @@ nav li a{
 .ponerFoto{
     height:90%;
 
+}
+
+@media (max-width:900px){
+    .cabeza h1{
+        font-size:50px
+    }
+    .cabeza p{
+        font-size:25px
+    }
+}
+@media (max-width:750px){
+    .cabeza h1{
+        font-size:40px;
+        width:90%
+    }
+    .cabeza p{
+        font-size:24px;
+        width:90%
+    }
+    .lectura1{
+        width:80%
+    }
+    .lectura2{
+        width:80%
+    }
+    .lectura3{
+        width:80%
+    }
+}
+@media (max-width:550px){
+    .cabeza h1{
+        font-size:33px
+    }
+    .cabeza p{
+        font-size:20px
+    }
+}
+@media (max-width:350px){
+    .ponerFoto{
+        height:30vh
+    }
+    .nav{
+        width:100%
+    }
 }
 
 
