--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
 *{
     margin:0 1px
 }
+.cajaMadre{
+    overflow:hidden
+}
 .cabeza{
     width:100%;
     height:100vh;
@@ -64,6 +67,11 @@ nav li a{
     background:black;
     border-radius:50%
 }
+
+
+.re{
+    display:none
+}
 .cuerpo{
     width:100%;
     background:rgb(204, 199, 199);
@@ -100,6 +108,13 @@ nav li a{
     margin-bottom: 1%;
     background:white;
 }
+.lec h1{text-align:center;color:blue;cursor:pointer}
+.arre{
+    width:90%;
+}
+.quite{
+    display:none;
+}
 .fotos{
     width:95%;
     margin: 1% 2.5%;
@@ -120,6 +135,9 @@ nav li a{
     width:70%;
     height:50%;
     cursor:pointer
+}
+.foti{
+    width:20%
 }
 .fondo{
     position:fixed;
@@ -159,6 +177,81 @@ nav li a{
 
 }
 
+
+.principal{
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100vh;
+    background:black;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+   transform:translate(110%)
+}
+.quitaReloj{
+    transform:translate(0)
+}
+
+.cerraR{
+    color:black;
+    position:fixed;
+    top:1%;
+    right:1%;
+    font-size:30px;
+    font-weight:800;
+    cursor:pointer;
+    background:white;
+    border-radius:50%
+}
+.cajaDelReloj{
+    display:flex;
+    flex-wrap:wrap;
+    align-items: center;
+    justify-content:center;
+    width:320px;
+    height:150px;
+    border-radius:15px;
+background-color: white;
+}
+.fecha{
+width:95%;
+height:25%;
+border:solid black 1px;
+text-align:center;
+font-size:30px
+}
+.hora2{
+    width:50%;
+    height:30%;
+    border-radius:10px;
+    font-size:45px;
+    line-height:45px;
+    text-align:center;
+    background:rgb(5, 250, 5);
+    box-shadow:0px 0px 10px 1px rgb(3, 83, 3) inset;
+    font-family:"DS-digital";
+}
+.segundo{
+    width:10%;
+    height:20%;
+    border:solid black 1px;
+    margin-left:2px;
+    font-size:20px;
+    font-weight:600;
+    line-height:40px
+}
+.ampm{
+    width:15%;
+    height:20%;
+    border:solid black 1px;
+    margin-left:20px;
+    font-size:25px;
+    text-align:center;
+    font-weight:800
+}
+
 @media (max-width:975px){
     .cabeza h1{
         font-size:50px
@@ -172,6 +265,13 @@ nav li a{
     }
     .nav{
         width:50%
+    }
+    .cajaHora{
+        font-size:29px;
+        line-height:35px
+    }
+    .cajareloj{
+        height:45px
     }
 }
 @media (max-width:740px){
@@ -205,6 +305,14 @@ nav li a{
     .fot{
         height:100px
     }
+
+    .cajaHora{
+        font-size:21.5px;
+        line-height:30px
+    }
+    .cajareloj{
+        height:35px
+    }
 }
 @media (max-width:550px){
     .cabeza h1{
@@ -228,6 +336,13 @@ nav li a{
     .lec{
         width:100%
     }
+    .cajaHora{
+        font-size:15.5px;
+        line-height:30px
+    }
+    .cajareloj{
+        height:35px
+    }
 }
 @media (max-width:400px){
     .ponerFoto{
@@ -236,13 +351,25 @@ nav li a{
     .nav{
         width:100%
     }
-    .lec{
-        width:100%
-    }
+    .lec{width:100%}
     .imagen{width:90%}
     .fot{height:100px}
     .lec p{font-size:20px}
     .lec h1{font-size:35px}
+.cajaHora{
+    font-size:11.7px;
+    line-height:30px
+}
+.cajareloj{
+    height:35px
+}
+.cerraR{
+    font-size:20px;
+    right:2%
+}
+.cajaDelReloj{
+    width:90%
+}
 }
 
 @media (max-width:300px){
@@ -251,6 +378,17 @@ nav li a{
     }
     .lec p{font-size:20px}
     .lec h1{font-size:35px}
+    .cajaHora{
+        font-size:20px;
+        line-height:30px;
+        padding:0 10px
+    }
+    .cajareloj{
+        height:80px
+    }
+    .fecha{
+        font-size:27px
+    }
 }
 
 
