--- a/index.css
+++ b/index.css
@@ -455,6 +455,99 @@ font-style: italic;
 .banner_text a{
     color:blue
 }
+/* *******************************LALA****************************** */
+.contenedor_lala{
+    /* height:800px; */
+    width:90%;
+    background:#e1eef7;
+    margin:5px auto;
+    border-radius:5px
+}
+.img_lala{
+    width:90%;
+    height:150px;
+    /* border:solid black 1px; */
+    margin:0 auto;
+    display:flex;
+    justify-content:center;
+
+}
+.img_lala img{
+    width:50%;
+    height:100%;
+    /* border:solid black 2px */
+}
+.contenedor_lala h3{
+    background:rgb(2, 2, 102);
+    color:#ffffff;
+    text-align:center;
+    width:100%;
+    height: 25px;
+    line-height:25px;
+    margin:5px auto;
+}
+.lala_oferta{
+    /* background:#f4f4f6; */
+    width:95%;
+    /* height:400px; */
+    margin:0px auto;
+    padding:20px;
+    display:grid;
+    grid-template-columns: auto auto;
+    /* grid-column-gap:5px; */
+    grid-row-gap:20px;
+    /* grid-gap: 50px 0px */
+}
+.contenedor_lala > p{
+    text-align:center;
+    /* background:ivory; */
+    width:100%;
+    height:20px;
+    line-height:20px;
+    margin:0
+}
+.convoca{
+    width:90%;
+    height:150px;
+    background:rgb(240, 240, 236);
+    display:flex;
+    flex-direction:column;
+    box-shadow:0 0 10px #3b3737;
+    align-items:center;
+    justify-content: center;
+    margin:0 auto;
+    border-radius:5px
+}
+.convoca p,.convoca h5{
+    text-align:center;margin:0;padding:2px
+}
+.convoca h5{
+    font-size:20px;color:#063dac
+}
+.convoca p{
+    font-size:15px;font-style:italic
+}
+.sueldos{
+    overflow:hidden;
+    background:rgb(183, 183, 236);
+    width:60%;
+    height:25px;
+    margin:0 auto;
+    display:flex;
+    justify-content: space-between;
+    line-height:25px
+}
+.salario{
+    background:rgb(5, 231, 5);font-weight: bold;
+}
+.monto{
+    /* background:rgb(231, 229, 229); */
+    font-weight:bold
+}
+.mon{
+    height:100%;padding:2px
+}
+
 /* ***********************************NOTICIAS_2***************************** */
 .noticias_2{
     width:100%;
@@ -473,14 +566,12 @@ font-style: italic;
     display:flex;
     flex-wrap: wrap;
     justify-content:space-evenly;
-    /* padding:0 5px */
 }
 .secNoti_1{
     background: rgb(210, 210, 216);
     padding: 5px;
     margin: 5px;
     width:40%;
-    /* height:200px; */
     overflow: hidden;
 
 }
@@ -494,15 +585,10 @@ font-style: italic;
 /* ************************************NUEVAS********************************* */
 .slider{
     width:50%;
-    /* border:solid black 1px; */
-    /* background-color: rgb(67, 81, 121); */
 }
 .slider_1{
-    /* border:solid black 1px; */
-    /* padding:5px; */
     width:100%;
     margin:0;
-    /* background:rgb(214, 214, 221); */
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -537,11 +623,7 @@ font-style: italic;
     width:400px;
     height:200px;
     border-radius:5px
-    /* border:solid blue 2px */
 }
-
-
-
 
 /* ***********************************CONTADOR******************************* */
 
@@ -712,9 +794,9 @@ margin:20px auto
 }
 .pie_contacto,
 .pie_datos{
-    width:50%;
+    width:70%;
     height:100px;
-    margin:0 auto;
+    margin:5px auto;
     padding:4px;
     border-radius:4px;
     /* border:solid black 1px */
@@ -735,9 +817,11 @@ margin:20px auto
 .pie_datos p{
     margin:2px;
     text-decoration:none;
-font-size: 18px;
+font-size: 16px;
 color:#ffffff;
 font-family: Georgia, 'Times New Roman', Times, serif;
+font-style:italic;
+font-weight:lighter
 }
 
 /* ****************************************DERECHOS**************************** */
