--- a/index_medias.css
+++ b/index_medias.css
@@ -335,6 +335,9 @@ transform:translate(-0%)
     .sec_azar h5{
         font-size:17px
     }
+    .contenedor_lala{
+        background:red
+    }
     .img_lala{
         height:60px
     }
