--- a/index_medias.css
+++ b/index_medias.css
@@ -60,11 +60,12 @@ transform:translate(-0%)
         background:rgb(7, 7, 29)
     }
     .hamburg{
-        display:block
+        display:block;
+        top:10px
     }
     .log{
         position:absolute;
-        top:-30px;
+        top:-10px;
         left:0
     }
     .buscar{
@@ -134,11 +135,12 @@ transform:translate(-0%)
 }
 }
 @media(max-width:500px){
+
     .cinta{
-        height:55px
+        height:70px
     }
     .log{
-        top:-25px;
+        top:-20px;
         left:2%
         /* font-size:20px */
     }
@@ -146,7 +148,7 @@ transform:translate(-0%)
         font-size:18px
     }
     .buscar{
-        top:25px;
+        top:35px;
         left:1%;
         width:80%;
         height:25px
@@ -296,7 +298,7 @@ transform:translate(-0%)
         font-weight: bold;
     }
     .cinta1{
-background:red;
+/* background:red; */
         width:100%;
         z-index:3000;
     }
@@ -304,8 +306,8 @@ background:red;
         height:20px;
         background:rgb(1, 1, 80);
         text-align:center;
-        border:solid white 1px;
-        left:-20px
+        /* border:solid white 1px; */
+        left:-16px
     }
     .cinta1 li a{
         font-size:20px;
@@ -336,9 +338,6 @@ background:red;
     .sec_azar h5{
         font-size:17px
     }
-    .contenedor_lala{
-        background:red
-    }
     .img_lala{
         height:60px
     }
@@ -354,24 +353,15 @@ background:red;
         width:90%;
         margin-left:0px
     }
+    .convoca p{
+        font-size:18px
+    }
     .sueldos{
-        width:80%
-    }
-    .noticia_uno {
-        height:400px;
-        margin-top:-20px
-    }
-    .noticia_uno p{
-        margin-top:-30px
+        width:96%
     }
   
     .azar_cr{
         width:100%
-    }
-    .noti_img{
-        border:solid black 1px;
-        width:150px;
-        height:100px
     }
     .azar_cr a{
         font-size:15px
@@ -399,9 +389,9 @@ background:red;
 .pie_datos{
     width:100%;
 }
-.cinta{
+/* .cinta{
     height:100%
-}
+} */
 .pie_contacto a,
 .pie_datos p{
     font-size:15px
